src/test/resources/invalid/semanticErr/extra/array/insufficientRank.wacc
begin

int[] a = [1];
int[][] arr = [a];
println arr[0][1][0]

end